--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,7 +1,16 @@
 ﻿[server]
 headless = true
-port = 10000
+port = 8501
+enableCORS = false
+
+[logger]
+level = "debug"
 
 [browser]
 serverAddress = "0.0.0.0"
-serverPort = 10000
+
+[theme]
+primaryColor = "#ff4b4b"
+backgroundColor = "#ffffff"
+secondaryBackgroundColor = "#f0f0f0"
+textColor = "#262730"
